force-app/main/incentive-program/objects/Incentive_Plan_Task__c/Incentive_Plan_Task__c.object-meta.xml
<CustomObject>
    <label>Incentive Plan Task</label>
    <nameField>
        <displayFormat>IPT-{000000}</displayFormat>
        <label>Incentive Plan Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>