force-app/main/incentive-program/objects/Incentive_Plan_Task__c/fields/Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan__c</fullName>
    <label>Incentive Plan</label>
    <referenceTo>Incentive_Plan__c</referenceTo>
    <relationshipLabel>Incentive Plan Tasks</relationshipLabel>
    <relationshipName>Incentive_Plan_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>