force-app/main/incentive-program/objects/Incentive_Plan_Task__c/fields/IQVIA_Supported__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Supported</label>
    <type>Checkbox</type>
</CustomField>